[tool.poetry]
name = "hello_django"
version = "0.1.0"
description = "Starting at ground zero...mostly."
authors = ["SeraphimSage <kenneth.pinkerton90@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
